--- a/app/src/main/res/layout/activity_authentication.xml
+++ b/app/src/main/res/layout/activity_authentication.xml
@@ -46,7 +46,7 @@
         android:textStyle="bold" />
 
     <EditText
-        android:id="@+id/editTextTextEmailAddress"
+        android:id="@+id/editTextEmailAddress"
         android:layout_width="330dp"
         android:layout_height="73dp"
         android:layout_alignParentStart="true"
@@ -62,7 +62,7 @@
         android:textSize="18sp" />
 
     <EditText
-        android:id="@+id/editTextTextEmailAddress2"
+        android:id="@+id/editTextpassword"
         android:layout_width="330dp"
         android:layout_height="73dp"
         android:layout_alignParentStart="true"
@@ -134,5 +134,24 @@
         android:textColor="#070101"
         android:textSize="24sp"
         android:textStyle="bold" />
+
+    <ProgressBar
+        android:id="@+id/progressBar2"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="329dp"
+        android:visibility="gone"/>
+
+    <ImageView
+        android:id="@+id/show_hide"
+        android:layout_width="44dp"
+        android:layout_height="36dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="394dp"
+        android:layout_marginEnd="44dp" />
 
 </RelativeLayout>
