--- a/app/src/main/res/layout/activity_user_page.xml
+++ b/app/src/main/res/layout/activity_user_page.xml
@@ -7,21 +7,6 @@
     android:background="#DCF9F3"
     tools:context=".UserPage">
 
-    <EditText
-        android:id="@+id/sendMessage"
-        android:layout_width="361dp"
-        android:layout_height="55dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="7dp"
-        android:layout_marginTop="656dp"
-        android:background="@drawable/drawable2"
-        android:hint="Write a message here! "
-        android:textAlignment="center"
-        android:textSize="20sp"
-        android:textStyle="bold" />
-
     <ImageButton
         android:id="@+id/backButton2"
         android:layout_width="65dp"
@@ -47,25 +32,41 @@
         android:rotationY="2"
         app:srcCompat="@drawable/headerimage" />
 
-    <ImageButton
-        android:id="@+id/send_btn"
-        android:layout_width="38dp"
-        android:layout_height="49dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-
-        android:layout_marginTop="660dp"
-        android:layout_marginEnd="1dp"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        android:padding="8dp"
-        android:src="@drawable/ic_baseline_send" />
-
     <androidx.recyclerview.widget.RecyclerView
+        android:layout_below="@id/imageView4"
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="528dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="115dp" />
+        android:layout_height="match_parent"
+        android:layout_above="@id/bottom_layout"
+        android:scrollbars="none" />
+
+    <RelativeLayout
+        android:id="@+id/bottom_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginBottom="10dp">
+
+        <EditText
+            android:id="@+id/message_text_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:layout_toStartOf="@+id/send_btn"
+            android:background="@drawable/border"
+            android:hint="  Type your message"
+            android:padding="10dp"
+            android:textColor="@android:color/black" />
+
+        <ImageView
+            android:id="@+id/send_btn"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:src="@drawable/ic_baseline_send" />
+
+    </RelativeLayout>
+
 </RelativeLayout>
