--- a/app/src/main/res/layout/activity_user_page.xml
+++ b/app/src/main/res/layout/activity_user_page.xml
@@ -7,38 +7,55 @@
     android:background="#DCF9F3"
     tools:context=".UserPage">
 
+    <Button
+        android:id="@+id/menu_button"
+        android:layout_width="77dp"
+        android:layout_height="73dp"
+        android:layout_alignParentEnd="true"
+        android:layout_gravity="top|end"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="5dp"
+        android:background="?android:attr/selectableItemBackground"
+        android:backgroundTint="#875252"
+        android:padding="8dp"
+        android:text="Menu"
+        android:textColor="#0C0C0C"
+        android:textStyle="bold" />
+
     <ImageButton
-        android:id="@+id/backButton2"
+        android:id="@+id/backButton"
         android:layout_width="65dp"
         android:layout_height="65dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="3dp"
-        android:layout_marginTop="22dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="27dp"
         android:background="?android:attr/selectableItemBackground"
         android:onClick="onBackClick"
         app:srcCompat="@drawable/backbutton" />
 
     <ImageView
         android:id="@+id/imageView4"
-        android:layout_width="307dp"
-        android:layout_height="92dp"
+        android:layout_width="251dp"
+        android:layout_height="89dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="13dp"
-        android:layout_marginEnd="42dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="80dp"
         android:rotationX="2"
         android:rotationY="2"
         app:srcCompat="@drawable/headerimage" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_below="@id/imageView4"
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="577dp"
         android:layout_above="@id/bottom_layout"
+        android:layout_below="@id/imageView4"
+        android:layout_marginTop="0dp"
         android:scrollbars="none" />
+
 
     <RelativeLayout
         android:id="@+id/bottom_layout"
